--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "type": "wordpress-plugin",
     "autoload": {
         "psr-4": {
-            "TwwcProtein\\": "src/"
+            "TwwcProtein\\": "src/",
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TwwcProtein\\Tests\\": "tests/"
         }
     },
     "authors": [
