--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,29 +1,18 @@
 <?xml version="1.0"?>
-<phpunit
-        bootstrap="tests/bootstrap.php"
-        backupGlobals="false"
-        colors="true"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true">
-    <testsuites>
-        <testsuite name="unit">
-            <directory prefix="test-" suffix=".php">./tests/</directory>
-        </testsuite>
-    </testsuites>
-    <coverage cacheDirectory="/app/wp-content/plugins/tww-protein/cache"
-            includeUncoveredFiles="true"
-            processUncoveredFiles="true"
-            pathCoverage="false"
-            ignoreDeprecatedCodeUnits="true"
-            disableCodeCoverageIgnore="true">
-            <include>
-                <directory suffix=".php">src</directory>
-            </include>
-    </coverage>
-    <php>
-        <env name="WP_PHPUNIT__DIR" value="/app/wp-content/plugins/tww-protein/vendor/wp-phpunit/wp-phpunit" />
-        <env name="WP_PHPUNIT__TESTS_CONFIG" value="/app/wp-tests-config.php" />
-        <ini name="error_log" value="php://stdout"/>
-    </php>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="tests/bootstrap.php" backupGlobals="false" colors="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" cacheDirectory=".phpunit.cache">
+  <testsuites>
+    <testsuite name="unit">
+      <directory prefix="Test_" suffix=".php">./tests/</directory>
+    </testsuite>
+  </testsuites>
+  <php>
+    <env name="WP_PHPUNIT__DIR" value="/app/wp-content/plugins/tww-protein/vendor/wp-phpunit/wp-phpunit"/>
+    <env name="WP_PHPUNIT__TESTS_CONFIG" value="/app/wp-tests-config.php"/>
+    <ini name="error_log" value="php://stdout"/>
+  </php>
+  <source>
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+  </source>
 </phpunit>
