Official WordPress code review * change slug * add license, text domain * add other plugin header options * exit if accessed directly is some php files

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "prudy/tww-protein",
+    "name": "prudy/twwc-protein",
     "type": "wordpress-plugin",
     "autoload": {
         "psr-4": {
-            "TwwcProtein\\": "src/",
+            "TwwcProtein\\": "src/"
         }
     },
     "autoload-dev": {
